Error Mitigation/MagiCoder/Data/javax_swing_text_html_parser/javax_swing_text_html_parserOutputResult.txt
Sample: Element_2
----------------------------------------------------------------
output:
./Data/javax_swing_text_html_parser/javaFiles/Element_2.java:5: error: no suitable constructor found for Element(String)
        Element element = new Element("div");
                          ^
    constructor Element.Element() is not applicable
      (actual and formal argument lists differ in length)
    constructor Element.Element(String,int) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

